--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -79,11 +79,14 @@
                 </div>
               </div>
               <div class="form-group form-show-validation row">
-                <label for="awb-deliveryMethod" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Delivery or Pickup</label>
+                <label for="awb-deliveryMethod" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Delivery or
+                  Pickup</label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
                   <select id="awb-deliveryMethod" name="deliveryMethod" class='form-control' data-placeholder="Select">
                     <% [{ label: 'Delivery', value: '1' }, { label: 'Pickup', value: '2' }].forEach(option => { %>
-                      <option value="<%=option.value%>" <% if(typeof awb !== 'undefined' && awb.deliveryMethod == option.value) { %> selected <% } %>><%=option.label%></option>
+                    <option value="<%=option.value%>"
+                      <% if(typeof awb !== 'undefined' && awb.deliveryMethod == option.value) { %> selected <% } %>>
+                      <%=option.label%></option>
                     <%})%>
                   </select>
                 </div>
@@ -100,35 +103,46 @@
               </div>
             </div>
             <div class="col-md-6">
-              <div class="form-group form-show-validation row">
-                <label for="invoiceNumber" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Invoice #</label>
-                <div class="col-lg-8 col-md-8 col-sm-8">
-                  <input type='text' class='form-control' id='invoiceNumber' name='invoiceNumber'  />
+              <script type="text/html" id="invoice-row-template">
+                <div class="row form-group invoice-upload-row">
+                  <input type="hidden" name="invoice.id" value="{ID}" />
+                  <div class="col-md-6 col-sm-12">
+                    <label>Invoice #</label>
+                    <input type="text" class="form-control" name="invoice.number" />
+                  </div>
+                  <div class="col-md-6 col-sm-12">
+                    <label>Value</label>
+                    <input type="text" class="form-control" name="invoice.value" />
+                  </div>
+                  <div class="col-md-12">
+                    <div class="custom-file-container" data-upload-id="invoice-upload-field-{CID}">
+                      <label class="custom-file-container__custom-file">
+                        <input type="file" class="custom-file-container__custom-file__custom-file-input" 
+                          name="invoice.file" accept="image/*" aria-label="Choose invoice to upload">
+                        <span class="custom-file-container__custom-file__custom-file-control"></span>
+                      </label>
+                      <div class="custom-file-container__image-preview my-2"
+                        style="overflow: hidden; border: 1px dashed; display: none;"></div>
+                      <button type="button" style="display: none;"
+                        class="custom-file-container__image-clear btn btn-round btn-danger float-right"
+                        title="Clear">Clear
+                      </button>
+                    </div>
+                  </div>
                 </div>
+              </script>
+              <div id="invoices-container">
+
               </div>
-              <div class="form-group form-show-validation row">
-                <label for="value" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Value</label>
-                <div class="col-lg-8 col-md-8 col-sm-8">
-                  <input type='text' class='form-control' id='value' name='value' />
-                  <a id='show-sed' data-toggle="modal" data-target="#alertSEDPOPUP"></a>
-                  <input type='hidden' value="0" id='sedRequired' />
-                </div>
-              </div>
-              <div class="form-group form-show-validation row">
-                <label class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Upload Invoice</label>
-                <div class="col-md-8">
-                  <div class="custom-file-container" data-upload-id="invoice-upload-field">
-                    <label class="custom-file-container__custom-file">
-                      <input type="file" class="custom-file-container__custom-file__custom-file-input" id="invFile"
-                        name="invFile" accept="image/*" aria-label="Choose File">
-                      <input type="hidden" name="MAX_FILE_SIZE" value="512000" />
-                      <span class="custom-file-container__custom-file__custom-file-control"></span>
-                    </label>
-                    <div class="custom-file-container__image-preview my-2"
-                      style="overflow: hidden; border: 1px dashed;"></div>
-                    <a href="#" class="custom-file-container__image-clear btn btn-round btn-danger float-right"
-                      title="Clear Invoice">Clear Invoice
-                    </a>
+              <div class="row form-group">
+                <div class="col-md-12">
+                  <div class="pull-right">
+                    <button class="btn btn-sm btn-primary" type="button" id="awb-form-add-invoice">
+                      Add Invoice
+                    </button>
+                    <!-- <button class="btn btn-sm btn-danger" type="button" id="awb-form-remove-invoice">
+                      Remove Invoice
+                    </button> -->
                   </div>
                 </div>
               </div>
@@ -152,26 +166,28 @@
                 </thead>
                 <tbody id='awbpoTableBody'>
                   <% awbpos.forEach(awbpo => { %>
-                    <tr value="<%=awbpo.id%>">
-                      <td><%=awbpo.source%></td>
-                      <td><%=awbpo.paidType%></td>
-                      <td><%=awbpo.note%></td>
-                      <td>
-                        <% for (var i =0; i < (Object.keys(awbpo).length-4)/2;  i++ ) { %>
-                          <% if(awbpo['serviceTypes['+i+'][charge]'] !== 'empty'){ %>
-                            <option value="<%=i%>"><%=awbpo['serviceTypes['+i+'][charge]']+ ' / ' +awbpo['serviceTypes['+i+'][amount]']%></option>
-                         <% } %>
-                        <% } %>
-                      </td>
-                      <td>
-                        <a class="editpo" href='' data-toggle="modal" data-edit-id="<%=awbpo.id%>" data-target="#add-purchase-order-popup"><i class="fas fa-pen"> </i></a>
-                      </td>
-                    </tr>
-                    <%})%>
+                  <tr value="<%=awbpo.id%>">
+                    <td><%=awbpo.source%></td>
+                    <td><%=awbpo.paidType%></td>
+                    <td><%=awbpo.note%></td>
+                    <td>
+                      <% for (var i =0; i < (Object.keys(awbpo).length-4)/2;  i++ ) { %>
+                      <% if(awbpo['serviceTypes['+i+'][charge]'] !== 'empty'){ %>
+                      <option value="<%=i%>">
+                        <%=awbpo['serviceTypes['+i+'][charge]']+ ' / ' +awbpo['serviceTypes['+i+'][amount]']%></option>
+                      <% } %>
+                      <% } %>
+                    </td>
+                    <td>
+                      <a class="editpo" href='' data-toggle="modal" data-edit-id="<%=awbpo.id%>"
+                        data-target="#add-purchase-order-popup"><i class="fas fa-pen"> </i></a>
+                    </td>
+                  </tr>
+                  <%})%>
                 </tbody>
               </table>
             </div>
-          </div>         
+          </div>
           <div class="separator-solid"></div>
           <div class="d-flex mr-1">
             <h3 class="card-title text-muted">Packages - <span class='package-info'>0 Pieces / 0.00 lbs</span></h3>
@@ -283,7 +299,8 @@
           <div class='form-group row'>
             <label for="shipper-firstName" class="col-md-3 mt-sm-2 text-right">Contact Name</label>
             <div class="col-md-4">
-              <input type='text' class='form-control' placeholder="First Name" id='shipper-firstName' name="firstName" />
+              <input type='text' class='form-control' placeholder="First Name" id='shipper-firstName'
+                name="firstName" />
             </div>
             <div class="col-md-4">
               <input type='text' class='form-control' placeholder="Last Name" id='shipper-lastName' name="lastName" />
@@ -362,7 +379,8 @@
           <div class='form-group row'>
             <label for="carrier-firstName" class="col-md-3 mt-sm-2 text-right">Contact Name</label>
             <div class="col-md-4">
-              <input type='text' class='form-control' placeholder="First Name" id='carrier-firstName' name="firstName" />
+              <input type='text' class='form-control' placeholder="First Name" id='carrier-firstName'
+                name="firstName" />
             </div>
             <div class="col-md-4">
               <input type='text' class='form-control' placeholder="Last Name" id='carrier-lastName' name="lastName" />
@@ -532,7 +550,7 @@
                 </label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
                   <input type="password" class="form-control" id='confirmPassword' name="confirmPassword"
-                         placeholder="Confirm New Password">
+                    placeholder="Confirm New Password">
                 </div>
               </div>
               <div class="form-group form-show-validation row">
@@ -678,7 +696,7 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-danger close-del" data-dismiss="modal">Close</button>
         <div id="buttonPO">
-          <button type="button" id="createPo" class="btn btn-primary">Create PO</button>         
+          <button type="button" id="createPo" class="btn btn-primary">Create PO</button>
         </div>
       </div>
     </div>
@@ -730,4 +748,5 @@
 </div>
 
 <% block('scripts').append('<script src="/js/utils.js"></script>')%>
+<% block('scripts').append('<script src="/js/warehouse/awb/invoices.js"></script>')%>
 <% block('scripts').append('<script src="/js/warehouse/awb/create.js"></script>')%>
