--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,30 +35,34 @@
 			<div class="container container-login container-transparent animated fadeIn">
 				<img src="../img/logo.jpg">
 				<h3 class="text-center mt-3">Sign In To Admin</h3>
-				<div class="login-form">
-					<div class="form-group">
-						<label for="username" class="placeholder"><b>Username </b></label>
-						<input id="username" placeholder="Username" name="username" type="text" class="form-control" required>
-					</div>
-					<div class="form-group">
-						<label for="password" class="placeholder"><b>Password</b></label>
-						<!-- <a href="#" class="link float-right forgot-password">Forget Password ?</a> -->
-						<div class="position-relative">
-							<input id="password" placeholder="Password" name="password" type="password" class="form-control" required>
-							<div class="show-password">
-								<i class="icon-eye"></i>
+				<form id="login-form">
+					<div class="login-form">
+						<div class="form-group">
+							<label for="username" class="placeholder"><b>Username </b></label>
+							<input id="username" placeholder="Username" name="username" type="text" class="form-control" required>
+						</div>
+						<div class="form-group">
+							<label for="password" class="placeholder"><b>Password</b></label>
+							<!-- <a href="#" class="link float-right forgot-password">Forget Password ?</a> -->
+							<div class="position-relative">
+								<input id="password" placeholder="Password" name="password" type="password" class="form-control"
+									required>
+								<div class="show-password">
+									<i class="icon-eye"></i>
+								</div>
 							</div>
 						</div>
-					</div>
 
-					<div class="form-group form-action-d-flex mb-3">
-						<!-- <div class="custom-control custom-checkbox">
+						<div class="form-group form-action-d-flex mb-3">
+							<!-- <div class="custom-control custom-checkbox">
 							<input type="checkbox" class="custom-control-input" id="rememberme">
 							<label class="custom-control-label m-0" for="rememberme">Remember Me</label>
 						</div> -->
-						<a href="#" class="btn btn-primary col-md-5 float-right mt-3 mt-sm-0 fw-bold login-button">Sign In</a>
+							<button type="submit" class="btn btn-primary col-md-5 float-right mt-3 mt-sm-0 fw-bold login-button">Sign
+								In</button>
+						</div>
 					</div>
-				</div>
+				</form>
 			</div>
 		</div>
 	</div>
