--- a/views/pages/warehouse/manifest/preview.ejs
+++ b/views/pages/warehouse/manifest/preview.ejs
@@ -17,6 +17,13 @@
   <div class='col-xl-12 col-lg-6 col-md-12 col-sm-12'>
     <div class='card'>
       <div class="card-header">
+        <div class="pull-right">
+          <div class="btn-group custom-btn-group float-right" role="group">
+            <a href="/api/printer/download-pdf/manifest/<%=manifest.id%>/air-cargo-manifest" class="btn btn-primary btn-sm">
+              Air Cargo Manifest &nbsp;&nbsp;<i class="fa fa-download"></i>
+            </a>
+          </div>
+        </div>
         <h4 class="card-title"><%=title%></h4>
       </div>
       <div class="card-body">
