VZ9-108 Add Flight Manifest generation

--- a/views/pages/warehouse/manifest/preview.ejs
+++ b/views/pages/warehouse/manifest/preview.ejs
@@ -3,7 +3,7 @@
     <div class="btn-group custom-btn-group float-right" role="group">
       <a href="/warehouse/download-load-sheet/<%=manifest.mid%>" type="button" class="btn btn-primary btn-sm "> <i
           class='fa fa-download'></i> Load Sheet</a>
-      <a href='/warehouse/download-flight-manifest/<%=manifest.mid%>' class="btn btn-success btn-sm "><i
+      <a href='/api/printer/download-pdf/manifest/<%=manifest.id%>/flight-manifest' class="btn btn-success btn-sm "><i
           class='fa fa-download'></i> Flight Manifest</a>
       <button type="button" class="btn btn-info btn-sm ship-manifest-btn ship-manifest"> <i class='fa fa-plane'></i>
         Send Flight</button>
@@ -21,6 +21,9 @@
           <div class="btn-group custom-btn-group float-right" role="group">
             <a href="/api/printer/download-pdf/manifest/<%=manifest.id%>/air-cargo-manifest" class="btn btn-primary btn-sm">
               Air Cargo Manifest &nbsp;&nbsp;<i class="fa fa-download"></i>
+            </a>
+            <a href="/api/printer/download-pdf/manifest/<%=manifest.id%>/flight-manifest" class="btn btn-primary btn-sm">
+              Flight Manifest &nbsp;&nbsp;<i class="fa fa-download"></i>
             </a>
           </div>
         </div>
