--- a/views/pages/warehouse/manifest-packages.ejs
+++ b/views/pages/warehouse/manifest-packages.ejs
@@ -36,7 +36,7 @@
                                   
                                     <a href="/warehouse/download-load-sheet/<%=manifest.mid%>" type="button" class="btn btn-primary btn-sm "> <i class='fa fa-download'></i> Load Sheet</button>
                                   
-                                    <a href='/warehouse/download-flight-manifest/<%=manifest.mid%>'  class="btn btn-success btn-sm "
+                                    <a href='/api/printer/download-pdf/manifest/<%=manifest.id%>/flight-manifest'  class="btn btn-success btn-sm "
                                         ><i class='fa fa-download'></i> Flight Manifest</a>
 
                                     
