--- a/views/pages/warehouse/manifest/edit.ejs
+++ b/views/pages/warehouse/manifest/edit.ejs
@@ -26,7 +26,7 @@
                   <div class="btn-group custom-btn-group float-right" role="group">
                     <a href="/warehouse/download-load-sheet/<%=manifest.mid%>" type="button"
                       class="btn btn-primary btn-sm "> <i class='fa fa-download'></i> Load Sheet</button>
-                      <a href='/warehouse/download-flight-manifest/<%=manifest.mid%>' class="btn btn-success btn-sm "><i
+                      <a href='/api/printer/download-pdf/manifest/<%=manifest.id%>/flight-manifest' class="btn btn-success btn-sm "><i
                           class='fa fa-download'></i> Flight Manifest</a>
                       <button type="button" class="btn btn-info btn-sm ship-manifest-btn ship-manifest"> <i
                           class='fa fa-plane'></i> Send Flight</button>
