Add US customs generation

--- a/views/pages/warehouse/manifest-packages.ejs
+++ b/views/pages/warehouse/manifest-packages.ejs
@@ -34,7 +34,7 @@
                             <div class="clearfix">
                                 <div class="btn-group custom-btn-group float-right" role="group">
                                   
-                                    <a href="/warehouse/download-load-sheet/<%=manifest.mid%>" type="button" class="btn btn-primary btn-sm "> <i class='fa fa-download'></i> Load Sheet</button>
+                                    <a href="/api/printer/download-pdf/manifest/<%=manifest.id%>/flight-load-sheet" type="button" class="btn btn-primary btn-sm "> <i class='fa fa-download'></i> Load Sheet</button>
                                   
                                     <a href='/api/printer/download-pdf/manifest/<%=manifest.id%>/flight-manifest'  class="btn btn-success btn-sm "
                                         ><i class='fa fa-download'></i> Flight Manifest</a>
