--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -276,7 +276,7 @@
 				</li>
 				<li class="nav-item <% if (page.includes('/service-charges/')) { %> active <% } %>">
 					<a href="/warehouse/service-charge/list">
-						<i class="fa fa-exclamation-triangle"></i>
+						<i class="fas fa-dollar-sign"></i>
 						<p>Service Charges </p>
 					</a>
 				</li>
