--- a/views/pages/admin/user/create.ejs
+++ b/views/pages/admin/user/create.ejs
@@ -62,7 +62,7 @@
             <div class="col-lg-4 col-md-9 col-sm-8">
               <select class="form-control" id="userRole" name='userRole' multiple="multiple">
                 <% roles.forEach(role => { %>
-                <option value="<%= role%>"> <%= role %> </option>
+                <option value="<%= role._id%>"> <%= role.type %> </option>
                 <% }) %>
               </select>
             </div>
