--- a/views/pages/admin/user/list.ejs
+++ b/views/pages/admin/user/list.ejs
@@ -22,13 +22,20 @@
           <tbody>
             <% users.forEach(function(user){%>
             <tr data-record="<%= user.username %>">
-              <td scope="row"><%=user.userRole%></td>
+              <td scope="row">
+                <% if (user.roles.length) {user.roles.forEach(function(role, roleIndex){%>
+                  <%=role.type%>
+                  <% if ((roleIndex + 1) !== user.roles.length){ %>
+                    <spna>,<span>
+                  <% }%>
+                <%})}%>
+              </td>
               <td><%=user.username%></td>
               <td><%=user.firstName + ' ' + user.lastName%></td>
               <td><%=user.email%></td>
               <td><%=user.mobile %></td>
               <td>
-                <% if (user.enabled == 'false'){ %>
+                <% if (!user.enabled){ %>
                 <span class='badge badge-danger'>Inactive</span>
                 <% } else { %>
                 <span class='badge badge-info'>Active</span>
@@ -37,7 +44,7 @@
               <td>
                 <a href='manage/<%=user.username%>/get'><i class="fas fa-user-edit"></i></a>
                 <a href='#' class='rm-user' data-id='<%=user.username%>'><i class="fas fa-trash"></i></a>
-                <% if (user.enabled == 'false'){ %>
+                <% if (!user.enabled){ %>
                 <a href='#' class='enableUser' data-id='<%=user.username%>' data-value='true'> <span
                     class='badge badge-info float-right'>Enable</span></a>
                 <% } else {%>
