--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -42,7 +42,7 @@
 						<p>Dashboard </p>
 					</a>
 				</li>
-				<% if (user.role.includes("Admin")) { %>
+				<% if (helpers.checkRole(user.roles, "Admin")) { %>
 				<li class="nav-section">
 					<span class="sidebar-mini-icon">
 						<i class="fa fa-ellipsis-h"></i>
@@ -73,9 +73,10 @@
 					<span class="sidebar-mini-icon">
 						<i class="fa fa-ellipsis-h"></i>
 					</span>
-					<h4 class="text-section">Warehouse</h4>
+					<h4 class="text-section">Warehouse e  <% console.log('HEELEELELELEL') %> <% console.log(user.roles.join().includes('Admin')) %> </h4>
+
 				</li>
-				<%if (user.role.includes('Admin') || user.role.includes("Warehouse Fl")) {%>
+				<%if (helpers.checkRole(user.roles, "Admin") || helpers.checkRole(user.roles, "Warehouse Fl")) {%>
 				<li class="nav-item <% if (page.includes('/fll/')) { %> active <% } %>">
 					<a data-toggle="collapse" href="#warehouse-fll">
 						<i class="fas fa-building"></i>
@@ -118,7 +119,7 @@
 					</div>
 				</li>
 				<% } %>
-				<% if (user.role.includes("Admin") || user.role.includes("Warehouse NAS")) { %>
+				<% if (helpers.checkRole(user.roles, "Admin") || helpers.checkRole(user.roles, "Warehouse NAS")) { %>
 				<li class="nav-item <% if (page.includes('/nas/')) { %> active <% } %>">
 					<a data-toggle="collapse" href="#warehouse-nas">
 						<i class="fas fa-warehouse"></i>
@@ -177,7 +178,7 @@
 				</li>
 				<% } %>
 				<!-- Store -->
-				<% if (user.role.includes("Admin") || user.role.includes("Store")) { %>
+				<% if (helpers.checkRole(user.roles, "Admin") || helpers.checkRole(user.roles, "Store")) { %>
 				<li class="nav-item">
 					<a data-toggle="collapse" href="#stores">
 						<i class="fas fa-store"></i>
@@ -201,7 +202,7 @@
 				</li>
 				<% } %>
 				<!-- Fleet -->
-				<% if (user.role.includes("Admin") || user.role.includes("Warehouse") || user.role.includes("Warehouse")) { %>
+				<% if (helpers.checkRole(user.roles, "Admin") || helpers.checkRole(user.roles, "Warehouse")) { %>
 				<li class="nav-item <% if (page.includes('/fleet/')) { %> active <% } %>">
 					<a data-toggle="collapse" href="#fleet">
 						<i class="fas fa-truck"></i>
