--- a/views/pages/admin/customers/list.ejs
+++ b/views/pages/admin/customers/list.ejs
@@ -23,12 +23,12 @@
             <tbody>
               <% customers.forEach(function(customer){%>
               <tr data-record="<%= customer.id %>">
-                <td><%=customer.companyId%></td>
+                <td><%=customer.company.name%></td>
                 <td scope="row"><%=customer.pmb%></td>
                 <td><%=customer.firstName + ' ' + customer.lastName%></td>
                 <td><%=customer.email%></td>
                 <td><%=customer.telephone %></td>
-                <td><%=customer.location %></td>
+                <td><%=customer.location.name %></td>
                 <td>
                   <a href='manage/<%=customer.id%>/get'><i class="fas fa-user-edit"></i></a>
                   <a href='#' class='rm-customer ml-3' data-id='<%=customer.id%>'><i class="fas fa-trash"></i></a>
