Modified container service.

--- a/views/pages/warehouse/container/list.ejs
+++ b/views/pages/warehouse/container/list.ejs
@@ -29,7 +29,7 @@
                 <td><%=container.number%></td>
                 <td><%=container.size%></td>
                 <td><%=container.weight%></td>
-                <td><%=container.date%></td>
+                <td><%=helpers.formatDate(container.date)%></td>
                 <td><%=container.seal%></td>
                 <td>
                   <a href="manage/<%=container.id%>/get"><i class="fas fa-pen"></i></a>
