--- a/views/pages/warehouse/container/create.ejs
+++ b/views/pages/warehouse/container/create.ejs
@@ -27,7 +27,7 @@
               >Number</label
             >
             <div class="col-lg-4 col-md-9 col-sm-8">
-              <input type="number" class="form-control" id="container-number" name="number" />
+              <input type="number" min="0" class="form-control" id="container-number" name="number" />
             </div>
           </div>
           <div class="form-group form-show-validation row">
@@ -35,7 +35,7 @@
               >Size</label
             >
             <div class="col-lg-4 col-md-9 col-sm-8">
-              <input type="number" class="form-control" id="container-size" name="size" />
+              <input type="number" min="0" class="form-control" id="container-size" name="size" />
             </div>
           </div>
           <div class="form-group form-show-validation row">
@@ -44,6 +44,7 @@
             >
             <div class="col-lg-4 col-md-9 col-sm-8">
               <input
+              min="0"
                 type="number"
                 class="form-control"
                 id="container-weight"
