--- a/views/pages/warehouse/container/edit.ejs
+++ b/views/pages/warehouse/container/edit.ejs
@@ -30,6 +30,7 @@
             <div class="col-lg-4 col-md-9 col-sm-8">
               <input
                 type="number"
+                min="0"
                 class="form-control"
                 id="container-number"
                 name="number"
@@ -44,6 +45,7 @@
             <div class="col-lg-4 col-md-9 col-sm-8">
               <input
                 type="number"
+                min="0"
                 class="form-control"
                 id="container-size"
                 name="size"
@@ -58,6 +60,7 @@
             <div class="col-lg-4 col-md-9 col-sm-8">
               <input
                 type="number"
+                min="0"
                 class="form-control"
                 id="container-weight"
                 name="weight"
@@ -71,7 +74,7 @@
               >Date</label
             >
             <div class="col-lg-4 col-md-9 col-sm-8 d-flex">
-              <input type="text" class="form-control" id="container-date" name="date" value="<%=container.date%>" />
+              <input type="text" class="form-control" id="container-date" name="date" value="<%=helpers.formatDate(container.date)%>" />
               <div class="input-group-append">
                 <span class="input-group-text">
                   <i class="fa fa-calendar-check"></i>
