--- a/views/pages/fleet/vehicle/create.ejs
+++ b/views/pages/fleet/vehicle/create.ejs
@@ -6,9 +6,9 @@
   <form id="add-vehicle-form" action="create">
     <div class="card-body">
       <div class="form-group form-show-validation row">
-        <label for="vehicle_make" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Vehicle Make </label>
+        <label for="vehicleMake" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Vehicle Make </label>
         <div class="col-lg-4 col-md-9 col-sm-8">
-          <input type="text" class="form-control" id="vehicle_make" name="vehicle_make" placeholder="Vehicle Make"
+          <input type="text" class="form-control" id="vehicleMake" name="vehicleMake" placeholder="Vehicle Make"
             required>
         </div>
       </div>
