--- a/views/pages/fleet/plane/edit.ejs
+++ b/views/pages/fleet/plane/edit.ejs
@@ -6,17 +6,17 @@
   <form id="add-plane-form" action="update">
     <div class="card-body">
       <div class="form-group form-show-validation row">
-        <label for="tail_number" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Name </label>
+        <label for="tailNumber" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Name </label>
         <div class="col-lg-4 col-md-9 col-sm-8">
-          <input type="text" class="form-control" id="tail_number" name="tail_number" placeholder="Tail Number"
-            value="<%= plane.tail_number%>" required>
+          <input type="text" class="form-control" id="tailNumber" name="tailNumber" placeholder="Tail Number"
+            value="<%= plane.tailNumber%>" required>
         </div>
       </div>
       <div class="form-group form-show-validation row">
-        <label for="aircraft_type" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Air Craft Type </label>
+        <label for="aircraftType" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Air Craft Type </label>
         <div class="col-lg-4 col-md-9 col-sm-8">
-          <input type="text" class="form-control" id="aircraft_type" name="aircraft_type" placeholder="Air Craft Type"
-            value="<%= plane.aircraft_type%>" required>
+          <input type="text" class="form-control" id="aircraftType" name="aircraftType" placeholder="Air Craft Type"
+            value="<%= plane.aircraftType%>" required>
         </div>
       </div>
       <div class="form-group form-show-validation row">
