--- a/views/pages/fleet/vehicle/edit.ejs
+++ b/views/pages/fleet/vehicle/edit.ejs
@@ -6,10 +6,10 @@
   <form id="add-vehicle-form" action="update">
     <div class="card-body">
       <div class="form-group form-show-validation row">
-        <label for="vehicle_make" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Vehicle Make </label>
+        <label for="vehicleMake" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Vehicle Make </label>
         <div class="col-lg-4 col-md-9 col-sm-8">
-          <input type="text" class="form-control" id="vehicle_make" name="vehicle_make" placeholder="Vehicle Make"
-            value="<%= vehicle.vehicle_make %>" required>
+          <input type="text" class="form-control" id="vehicleMake" name="vehicleMake" placeholder="Vehicle Make"
+            value="<%= vehicle.vehicleMake %>" required>
         </div>
       </div>
       <div class="form-group form-show-validation row">
