--- a/views/pages/warehouse/awb/no-docs.ejs
+++ b/views/pages/warehouse/awb/no-docs.ejs
@@ -25,21 +25,21 @@
                   awbs.forEach(function(awb){
                     if(!awb.invoice) {
                   %>
-            <tr data-record="<%= awb.id %>">
+            <tr data-record="<%= awb._id %>">
               <td><%=awb.dateCreated%></td>
               <td><%=awb.customer.pmb %></td>
-              <td><a href="manage/<%=awb.id%>/preview"><%=awb.id%></a></td>
+              <td><a href="manage/<%=awb._id%>/preview"><%=awb._id%></a></td>
               <td><%=awb.customer.firstName + ' ' + awb.customer.lastName%></td>
               <td><%=awb.shipper.name %></td>
               <td><%=awb.carrier.name %></td>
               <td><%=awb.packages.length %></td>
               <td><%=awb.weight %></td>
               <td class="text-center">
-                <a href='manage/<%=awb.id%>/get' class="btn btn-link btn-primary p-1" data-toggle="tooltip"
+                <a href='manage/<%=awb._id%>/get' class="btn btn-link btn-primary p-1" data-toggle="tooltip"
                   data-original-title="Edit"> <i class="fa fa-pencil-alt"></i> </a>
-                <a class="btn btn-link btn-danger btn-rm-awb p-1" data-toggle="modal" data-id="<%=awb.id%>"
+                <a class="btn btn-link btn-danger btn-rm-awb p-1" data-toggle="modal" data-id="<%=awb._id%>"
                   data-target="#confirm-delete-awb"> <i class="fa fa-trash"></i> </a>
-                <a class="btn btn-link btn-primary btn-print-awb p-1" data-toggle="modal" data-id="<%=awb.id%>"
+                <a class="btn btn-link btn-primary btn-print-awb p-1" data-toggle="modal" data-id="<%=awb._id%>"
                   data-target="#print-popup"> <i class="fa fa-print"></i> </a>
               </td>
             </tr>
